Redesign waypoint screens: own cards, full HSV color picker, smooth list
Rebuild both screens in the same modern dark language as the config GUI,
implemented locally so nothing classloads from the optional Fayber Config
library (only its Inter font assets are borrowed by resource id when
installed):

- WaypointScreen: search + New toolbar, floating rows of independent
  cards (show/hide, waypoint, teleport, delete), styled confirm dialog,
  smooth sub-pixel list scrolling with slim scrollbar
- WaypointEditScreen: name/coordinate cards, beacon and rainbow toggle
  cards, full HSV color picker (saturation/value square + hue bar) with
  hex field and live swatch; preset color swatches removed entirely;
  compact metrics so it fits short windows
- gui/style: Theme palette, physical-pixel Ui primitives with
  anti-aliased round-corner shader, vector icon set, fallback rendering
  when the shader pipeline is unavailable
- gui/widget: CardButton, IconCardButton, ToggleCard, StyledEditBox
  (card-styled EditBox that rides the UI font via the formatter hook),
  ColorPicker, WaypointCard
- Xaero marker size option: xaeroMarkerScale config (0.5-3.0) scaling
  dot, name plate and boxes together; slider in both config screens
- dev: headless preview workbench (tools/preview.sh + PreviewHook)